# Media-Bias-Analysis

./: .gitignore  LICENSE  README.md  config.py  local_sources.csv  main.py  national_sources.csv  paper_content.txt  pyproject.toml  requirements.txt
data/: military.csv
modules/: analysis.py  clustering.py  data_loader.py  visualization.py
output/: Budget_report.txt  Elections_report.txt  Foreign Policy_report.txt  Military_report.txt  Supreme Court_report.txt
